test/core/errors/offsets_error/zs/lengthof_error.zs
package lengthof_error;

struct LengthOfError
{
    uint32 offsetArray[];
lengthof(offsetArray):
    string field;
};
